fix(IconButton): Ensure anchor and button icons are aligned (#847)

--- a/packages/styles/icon-button.css
+++ b/packages/styles/icon-button.css
@@ -58,6 +58,11 @@
   padding: 0;
 }
 
+/* Ensure both <a> and <button> IconButtons are aligned correctly. See #846. */
+a.IconButton {
+  vertical-align: middle;
+}
+
 .IconButton .Icon {
   width: 100%;
   height: 100%;
